# vid_tokenizer

./: .gitignore  .gitmodules  CHECKLIST.md  CLAUDE.md  CLAUDE_readme.md  CONDA_SETUP.md  PLAN.md  PR_LOCAL_REVIEW.md  README.md  REMOTE_GPU_PREPARATION.md  SUMMARY.md  brief.md  plan.md  pyproject.toml  quest.yaml  status.md  summary.md
.claude/: MEMORY_POLICY.md  MISTAKE_POLICY.md  MULTI_AGENT_GUIDE.md  QUICKSTART.md  README.md  SYSTEM.md  WORKFLOW.md  experiments_template.md
.claude/agents/: deepscientist-analysis-campaign.md  deepscientist-baseline.md  deepscientist-decision.md  deepscientist-experiment.md  deepscientist-figure-polish.md  deepscientist-finalize.md  deepscientist-idea.md  (+7 more)
.ds/: agent_status.json  events.jsonl  lab_canvas_state.json  research_state.json  runtime_state.json  user_message_queue.json
DeepScientist_export/: README.md
artifacts/: _index.jsonl
docs/: LEARNING_PATH.md  LONG_VIDEO_CUSTOM_DATA_GUIDE.md  machine_codec_pipeline.md
handoff_resnet18_teacher/: README.md  nvrc_teacher_interface.patch  outer_smoke_teacher_loss.patch
paper/: baseline_inventory.json  claim_evidence_map.json  draft.md  evidence_ledger.json  evidence_ledger.md  paper_bundle_manifest.json  paper_line_state.json  references.bib  related_work_map.md  selected_outline.json  writing_plan.md
patches/: nvrc_machine_oriented_pipeline.patch
tests/: test_machine_codec_pipeline.py
tokenizer_vid/: HANDOFF.md
tools/: download_uvg_sources.sh  export_deepscientist_snapshot.sh  prepare_uvg_dataset.sh  run_machine_codec_pipeline.py  smoke_teacher_loss.py
(+788 files in other folders)
