[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-codec-pipeline"
version = "0.1.0"
description = "Orchestration layer for machine-oriented NVRC video compression experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "vid_tokenizer contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
nvrc = [
  "accelerate",
  "numpy",
  "pillow",
  "pyyaml",
  "torch",
  "torchvision"
]

[project.scripts]
machine-codec = "machine_codec_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
